--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <div class="card" style="width: 400px; height: 400px;">
+      <div class="card" style="width: 400px; height: 400px; color: red;">
         <div x-data>
           <svg viewBox="0 0 200 200" x-spline>
             <path d="" fill="transparent" stroke="currentColor"></path>
