adding a second instance to test

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,8 +8,16 @@
   </head>
   <body>
     <div id="app">
-      <div class="card" style="width: 400px; height: 400px; color: red;">
-        <div x-data>
+      <div class="card">
+        <div x-data style="color: red; width: 300px; height: 300px; margin: 0 auto;">
+          <svg viewBox="0 0 200 200" x-spline>
+            <path d="" fill="transparent" stroke="currentColor"></path>
+            <path d="" fill="transparent" stroke="currentColor"></path>
+          </svg>
+        </div>
+
+        <p>Double the freshness</p>
+        <div x-data style="color: blue; width: 300px; height: 300px; margin: 0 auto;">
           <svg viewBox="0 0 200 200" x-spline>
             <path d="" fill="transparent" stroke="currentColor"></path>
             <path d="" fill="transparent" stroke="currentColor"></path>
