--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="app">
       <div class="card">
         <div x-data style="color: red; width: 300px; height: 300px; margin: 0 auto;">
-          <svg viewBox="0 0 200 200" x-async x-test>
+          <svg viewBox="0 0 200 200" x-load="test">
             <path d="" fill="transparent" stroke="currentColor"></path>
             <path d="" fill="transparent" stroke="currentColor"></path>
           </svg>
@@ -18,7 +18,7 @@
 
         <p>Double the freshness</p>
         <div x-data style="color: blue; width: 300px; height: 300px; margin: 0 auto;">
-          <svg viewBox="0 0 200 200" x-spline>
+          <svg viewBox="0 0 200 200" x-load="test">
             <path d="" fill="transparent" stroke="currentColor"></path>
             <path d="" fill="transparent" stroke="currentColor"></path>
           </svg>
